# pk

./: CMakeLists.txt
.github/workflows/: msbuild.yml
scr/: main.cpp  mycode.cpp
src/: main_gui.cpp  window_func.h
src/script/: CMakeLists.txt
